compiler/tests-integration/testData/multiplatform/innerGenericClass/output.txt
-- Common --
Exit code: OK
Output:

-- Common (2) --
Exit code: COMPILATION_ERROR
Output:
warning: no target platform specified, using default
compiler/tests-integration/testData/multiplatform/innerGenericClass/common2.kt:8:15: error: unresolved reference 'unresolved' on receiver of type 'String?'.
    b.getAE().unresolved()
              ^^^^^^^^^^
